解决登录问题

--- a/back/.env
+++ b/back/.env
@@ -18,7 +18,7 @@ CSRF_TRUSTED_ORIGINS=http://localhost:8000
 MAIN_URL=http://localhost:8000/
 
 # 其他配置
-GML_KEY=your_gml_key_here
+GML_KEY=df5c2b3b732f49f2aa47a2f2c4d5d11a.stkzXRh2mkcoWAag
 WECHAT_PAY_MCHID=your_wechat_pay_mchid_here
 WECHAT_PAY_CERT_SERIAL_NO=your_wechat_pay_cert_serial_no_here
 WECHAT_PAY_APIV3_KEY=your_wechat_pay_apiv3_key_here
