配置系统与用户模型切换，以及改成是否使用系统模型和是否文章为空判断问题，文章不为空后续要修改完善

--- a/back/.env
+++ b/back/.env
@@ -6,7 +6,7 @@ WECHAT_SECRET=test_secret_for_development
 WECHAT_REDIRECT_URI=http://localhost:8000/wechat/callback/
 
 # 数据库配置
-DEFAULT_DATABASE=default
+DEFAULT_DATABASE=sqlite:///db.sqlite3
 
 # Redis配置
 REDIS_URL=redis://localhost:6379/0
@@ -23,3 +23,4 @@ WECHAT_PAY_MCHID=your_wechat_pay_mchid_here
 WECHAT_PAY_CERT_SERIAL_NO=your_wechat_pay_cert_serial_no_here
 WECHAT_PAY_APIV3_KEY=your_wechat_pay_apiv3_key_here
 WECHAT_PAY_NOTIFY_URL=http://localhost:8000/wx/notify/
+USE_SYSTEM_MODEL=False
